# pos-consensus-proof

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
consensus-proof/: Cargo.toml  build.rs
consensus-proof/src/: checkpoint.rs  helper.rs  lib.rs  main.rs  milestone.proto  milestone.rs  milestone_2.rs  types.proto  types.rs
contracts/: foundry.toml
contracts/src/: ConsensusProofVerifier.sol  StakingInfo.sol
operator/: Cargo.toml  build.rs
operator/src/: contract.rs  lib.rs  types.rs  utils.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
verifier/src/: ConsensusProofVerifier.sol
