[workspace]
members = [
    "consensus-proof",
    "operator",
    "program",
]
resolver = "2"

[workspace.dependencies]
base64 = "0.22.1"
sha2 = "0.10.8"
bytes = "1.7.1"
prost = "0.13.1"
prost-types = "0.13.1"
bincode = "1.3.3"
anyhow = "1.0.82"
eyre = "0.6"
ethers = "2.0.14"
dotenv = "0.15.0"
clap = "4.5.18"
url = "2.3"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }

# reth
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "std",
    "secp256k1"
] }

# alloy
alloy-primitives = "0.8.0"
alloy-rlp = "0.3.4"
alloy-sol-types = { version = "0.8" }
alloy-provider = { version = "0.3", default-features = false, features = [
    "reqwest",
] }
alloy-sol-macro = { version = "0.8" }
alloy = { version = "0.3" }
alloy-rpc-types = { version = "0.3", default-features = false, features = [
    "eth",
] }

# sp1
sp1-zkvm = "2.0.0"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0" }
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }
sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }

[patch.crates-io]
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.1" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.6.0" }