[package]
version = "0.1.0"
name = "pos-consensus-proof"
edition = "2021"

[dependencies]
base64.workspace = true
sha2.workspace = true
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
bincode.workspace = true

# reth
reth-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true

# sp1
sp1-zkvm.workspace = true
sp1-cc-client-executor.workspace = true

common = { path = "../common"}

[build-dependencies]
prost-build = "0.13.1"