[package]
name = "pos-consensus-proof-operator"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "prove"
# path = "src/bin/prove.rs"

# [[bin]]
# name = "vkey"
# path = "src/bin/vkey.rs"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] } 
reqwest = { version = "0.12.7", features = ["json"] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0" }
# reth-primitives = { git = "https://github.com/jtguibas/reth.git", branch = "john/rsp-8e9e6ac", default-features = false }
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "std",
] }
alloy-rlp = "0.3.4"
anyhow = "1.0.82"
eyre = "0.6"
ethers = "2.0.14"
dotenv = "0.15.0"
clap = "4.5.18"
bincode = "1.3.3"
prost-types = "0.13.1"
base64 = "0.22.1"
url = "2.3"
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }
sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call/", branch = "main" }
pos-consensus-proof = { path = "../consensus-proof" }

alloy-provider = { version = "0.3", default-features = false, features = [
    "reqwest",
] }
alloy-sol-types = { version = "0.8" }
alloy-primitives = "0.8.0"
alloy-sol-macro = { version = "0.8" }
alloy = { version = "0.3" }
alloy-rpc-types = { version = "0.3", default-features = false, features = [
    "eth",
] }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0" }
prost-build = "0.13.1"

[patch.crates-io]
alloy-eips = { git = "https://github.com/jtguibas/alloy.git", branch = "john/rsp-8e9e6ac" }